@@ -91,6 +91,8 @@ Version 1.5.0 -- CVS
     RFC3501.
   - Fix reply all address string in case the personal name contained a comma 
     (address separator).
+  - Added SASL PLAIN to IMAP and SMTP. Thanks to avel for the prodding and
+    code snippet.
 
 **************************************
 *** SquirrelMail Stable Series 1.4 ***
